tests/baselines/reference/identicalCallSignatures(strict=true).errors.txt
identicalCallSignatures.ts(4,6): error TS7006: Parameter 'x' implicitly has an 'any' type.
identicalCallSignatures.ts(16,6): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== identicalCallSignatures.ts (2 errors) ====
    // Each pair of call signatures in these types have a duplicate signature error.
    // Identical call signatures should generate an error.
    interface I {
        (x): number;
         ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        (x: any): number;
        <T>(x: T): T;
        <U>(x: U): U; // error
    }
    
    interface I2<T> {
        (x: T): T;
        (x: T): T; // error
    }
    
    var a: {
        (x): number;
         ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        (x: any): number;
        <T>(x: T): T;
        <T>(x: T): T; // error
    }